Fixed repeating "if"

--- a/HW1.tex
+++ b/HW1.tex
@@ -89,7 +89,7 @@ The circuit satisfiability ($CSAT$) problem is NP-Complete. This means that
 \item $CSAT \in NP$ and
 \item for all problems $Y \in NP$, $Y \leq_P CSAT$ 
 \end{enumerate}
-This means that every problem $Y$ in $NP$ can be reduced to $CSAT$. Or in other words, $CSAT$ is at least as hard as the hardest problem in $NP$. The set $NP-Complete$ is a subset of $NP$ as shown in figure \ref{P-NP}. So $CSAT$ is at least as hard as any $NP-Complete$ problem. This means that if if a polynomial time algorithm can be used to solve $CSAT$, then every other $NP-Complete$ problem (which will be in $NP$) can be solved in polynomial time since it would be easier or at most as difficult as $CSAT$. So the statement is true.
+This means that every problem $Y$ in $NP$ can be reduced to $CSAT$. Or in other words, $CSAT$ is at least as hard as the hardest problem in $NP$. The set $NP-Complete$ is a subset of $NP$ as shown in figure \ref{P-NP}. So $CSAT$ is at least as hard as any $NP-Complete$ problem. This means that if a polynomial time algorithm can be used to solve $CSAT$, then every other $NP-Complete$ problem (which will be in $NP$) can be solved in polynomial time since it would be easier or at most as difficult as $CSAT$. So the statement is true.
 
     \item \textit{If no polynomial time algorithm can solve the SAT problem, then no polynomial time algorithm can solve the circuit satisfiability problem.}
     
